[gd_scene load_steps=7 format=3 uid="uid://dsectdpfsejc2"]

[ext_resource type="FontFile" uid="uid://dnkutux53es4m" path="res://fonts/NotoSerif-VariableFont_wdth,wght.ttf" id="1_2aysj"]
[ext_resource type="Script" uid="uid://b3q4bth7keth8" path="res://prefabs/hub/hub.gd" id="1_8ajyi"]
[ext_resource type="Shader" uid="uid://dm4h5wh2tuaek" path="res://shaders/film_grain.gdshader" id="3_pnn0i"]

[sub_resource type="LabelSettings" id="LabelSettings_8ajyi"]
font = ExtResource("1_2aysj")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_2aysj"]
font = ExtResource("1_2aysj")
font_size = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uu6k5"]
shader = ExtResource("3_pnn0i")
shader_parameter/grain_amount = 0.01
shader_parameter/grain_size = 5.0

[node name="HUB" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_8ajyi")

[node name="ObjectNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_8ajyi")
horizontal_alignment = 1
vertical_alignment = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -2.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -28.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_2aysj")
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_uu6k5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
